@@ -20,6 +20,7 @@ export(set_tools)
 export(show_handers)
 export(show_mhanders)
 export(split_col_data)
+export(split_list)
 export(split_row_data)
 export(split_row_file)
 import(configr)
