@@ -4,7 +4,8 @@
 \alias{split_row_file}
 \title{Function to split big file to a series small files (by row)}
 \usage{
-split_row_file(filename, each_file_lines = 100, write_fun = "write.table",
+split_row_file(filename, each_file_lines = 100, use_system_split = FALSE,
+  system_split_params = "_split", write_fun = "write.table",
   write_params_x = "x", write_params_file = "file",
   write_params = list(sep = "", row.names = FALSE, col.names = FALSE, quote =
   FALSE))
@@ -21,6 +22,8 @@ split_row_file(filename, each_file_lines = 100, write_fun = "write.table",
 \item{write_params_file}{Parameter name of input file in read.fun}
 
 \item{write_params}{Other parameters pass to write_fun}
+
+\item{use_gnu_split}{Wheather use system split commend}
 }
 \description{
 Function to split big file to a series small files (by row)
